<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">

    <ImageView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginStart="32dp"
        android:src="@drawable/card_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivAvatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:src="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/container" />

    <View
        android:layout_width="10dp"
        android:layout_height="85dp"
        android:layout_alignParentEnd="true"
        android:alpha="0.4"
        android:background="@color/contentText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/name"
        android:textColor="@color/purple"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvId"
        app:layout_constraintStart_toEndOf="@id/ivAvatar"
        app:layout_constraintTop_toTopOf="@id/ivAvatar" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:text="@string/id"
        android:textColor="@color/bg"
        app:layout_constraintStart_toEndOf="@id/ivAvatar"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_light"
        android:lineSpacingExtra="8dp"
        android:text="@string/type"
        android:textColor="@color/bg"
        app:layout_constraintBottom_toTopOf="@id/tvId"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintTop_toTopOf="@id/container" />


</androidx.constraintlayout.widget.ConstraintLayout>